# RPi

./: ._shared  .clang-tidy  .gitignore  CODEOWNERS  README.md
.github/workflows/: static_analysis.yml
daemon/: CMakeLists.txt
daemon/build-arm64/: CMakeCache.txt  Makefile  adts_daemon  cmake_install.cmake
daemon/cmake/: aarch64-linux-gnu.cmake
daemon/core/: fd.hpp  main.cpp
daemon/modules/meta/: meta_module.cpp
daemon/modules/tls/: tls_module.cpp
daemon/modules/tracking/: tracking_module.cpp
driver/: KERNEL_BUILD.md  Makefile  scp.sh  turret-overlay.dts  turret_driver.c  turret_test.c
shared/: daemon_module.h  protocol.h
tools/: cppcheck_suppressions.txt  run_static_analysis.sh
